update: tmux with theme catppuccin

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,9 +3,8 @@
 # ==========================
 # config color of tmux
 # Add truecolor support
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
 set-option -g default-terminal "screen-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
 # ===   Key bindings     ===
 # ==========================
 # set prefix key
@@ -38,7 +37,7 @@ setw -g mouse on
 
 # automatically set window title
 set-window-option -g automatic-rename on
-set-option -g status-position bottom
+set-option -g status-position top
 set-option -g set-titles on
 
 # syncrhonize panes
@@ -63,11 +62,21 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
-#set -g @plugin 'arcticicestudio/nord-tmux'
-set -g @plugin 'egel/tmux-gruvbox'
 
-# tpm theme
-set -g @tmux-gruvbox 'dark' # or 'light'
+## theme gruvbox
+#set -g @plugin 'egel/tmux-gruvbox'
+#set -g @tmux-gruvbox 'dark' # or 'light'
+
+## theme catppuccin
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_pill_theme_enabled off
+set -g @catppuccin_powerline_icons_theme_enabled on
+set -g @catppuccin_l_left_separator ""
+set -g @catppuccin_l_right_separator ""
+set -g @catppuccin_r_left_separator ""
+set -g @catppuccin_r_right_separator ""
+set -g @catppuccin_window_tabs_enabled on
+set -g @catppuccin_date_time "%Y-%m-%d %H:%M"
 
 set -g default-terminal "${TERM}"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
