add: brew autojump packages

--- a/macos/playbooks/brew.yml
+++ b/macos/playbooks/brew.yml
@@ -9,6 +9,7 @@
 
         brew_packages:
               - atool
+              - autojump
               - bash
               - bat
               - bfs
