--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,7 +4,7 @@
 # config color of tmux
 # Add truecolor support
 # set -g default-terminal "screen-256color"
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "xterm-256color"
 # ===   Key bindings     ===
 # ==========================
 # set prefix key
@@ -69,14 +69,30 @@ set -g @plugin 'tmux-plugins/tmux-sidebar'
 
 ## theme catppuccin
 set -g @plugin 'catppuccin/tmux'
-set -g @catppuccin_pill_theme_enabled off
-set -g @catppuccin_powerline_icons_theme_enabled on
-set -g @catppuccin_l_left_separator ""
-set -g @catppuccin_l_right_separator ""
-set -g @catppuccin_r_left_separator ""
-set -g @catppuccin_r_right_separator ""
-set -g @catppuccin_window_tabs_enabled on
-set -g @catppuccin_date_time "%Y-%m-%d %H:%M"
+set -g @catppuccin_flavour 'mocha'
+#set -g @catppuccin_pill_theme_enabled on
+#set -g @catppuccin_powerline_icons_theme_enabled on
+#set -g @catppuccin_l_left_separator ""
+#set -g @catppuccin_l_right_separator ""
+#set -g @catppuccin_r_left_separator ""
+#set -g @catppuccin_r_right_separator ""
+#set -g @catppuccin_window_tabs_enabled on
+#set -g @catppuccin_date_time "%Y-%m-%d %H:%M"
+
+set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_number_position "left"
+set -g @catppuccin_window_middle_separator " | "
+set -g @catppuccin_window_default_fill "none"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_fill "all"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_modules_right "directory host date_time"
+set -g @catppuccin_status_left_separator "█"
+set -g @catppuccin_status_right_separator "█"
+set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
+
+set -g @catppuccin_directory_text "#{pane_current_path}"
 
 set -g default-terminal "${TERM}"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
