--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -79,7 +79,7 @@ set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_current_fill "all"
 set -g @catppuccin_window_current_text "#W"
 
-set -g @catppuccin_status_modules_right "directory host date_time"
+set -g @catppuccin_status_modules_right "user host date_time"
 set -g @catppuccin_status_left_separator "█"
 set -g @catppuccin_status_right_separator "█"
 set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
