--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,12 +3,11 @@
 # ==========================
 # config color of tmux
 # Add truecolor support
-# set -g default-terminal "screen-256color"
 set-option -g default-terminal "xterm-256color"
 # ===   Key bindings     ===
 # ==========================
 # set prefix key
-set -g prefix C-A
+set -g prefix C-b
 
 # switch panes using vim bindings or arrows
 bind k select-pane -U
@@ -55,44 +54,42 @@ set-option -g history-limit 50000
 
 # tpm plugin
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
-## theme gruvbox
-#set -g @plugin 'egel/tmux-gruvbox'
-#set -g @tmux-gruvbox 'dark' # or 'light'
+# load catppuccin
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
 
-## theme catppuccin
-set -g @plugin 'catppuccin/tmux'
-set -g @catppuccin_flavour 'mocha'
+# configure the catppuccin plugin
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_window_status_style "rounded"
 
-set -g @catppuccin_window_right_separator "█ "
-set -g @catppuccin_window_number_position "left"
-set -g @catppuccin_window_middle_separator " | "
-set -g @catppuccin_window_default_fill "none"
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_fill "all"
-set -g @catppuccin_window_current_text "#W"
+## Make the status line pretty and add some modules
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
 
-set -g @catppuccin_status_modules_right "user host date_time"
-set -g @catppuccin_status_left_separator "█"
-set -g @catppuccin_status_right_separator "█"
-set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
-
-set -g @catppuccin_directory_text "#{pane_current_path}"
-
-set -g default-terminal "${TERM}"
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
-
-# Install the plugins for tmux right at first start
+# install the plugins for tmux right at first start
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run ~/.tmux/plugins/tmux-cpu/cpu.tmux
+run ~/.tmux/plugins/tmux-battery/battery.tmux
+
+# escape sequence
+setw -g xterm-keys on
+set -s escape-time 200                     # faster command sequences
+set -sg repeat-time 600                   # increase repeat timeout
+set -s focus-events on
